--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://rafapaivadeandrade.github.io/portfolio",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -to index.html"
   },
   "author": "Rafael",
   "license": "ISC",
